--- a/src/style/scss/themes/_border.scss
+++ b/src/style/scss/themes/_border.scss
@@ -1,3 +1,11 @@
 .b-bottom {
-    border-bottom: 1px solid black;
+    border-bottom: 2px solid black;
+}
+
+.border {
+    border: 2px solid black;
+}
+
+.radius {
+    border-radius: 10px;
 }
