--- a/src/style/scss/util/_fonts.scss
+++ b/src/style/scss/util/_fonts.scss
@@ -13,3 +13,11 @@
     font-weight: $fw-main;
     text-transform: uppercase;
 }
+
+.text-center {
+    text-align: center;
+}
+
+.text-width {
+    max-width: 36ch;
+}
