--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 *, *::before, *::after {
@@ -8,6 +7,34 @@
   list-style-type: none;
   text-decoration: none;
   color: inherit;
+}
+
+.h-80 {
+  min-height: 80vh;
+}
+
+.h-60 {
+  min-height: 60vh;
+}
+
+.w-20 {
+  width: 20vw;
+}
+
+.w-40 {
+  width: 40vw;
+}
+
+.width {
+  width: fit-content;
+}
+
+.width-full {
+  min-width: 100%;
+}
+
+.inline {
+  margin-inline: auto;
 }
 
 .C-900 {
@@ -60,6 +87,14 @@
   text-transform: uppercase;
 }
 
+.text-center {
+  text-align: center;
+}
+
+.text-width {
+  max-width: 36ch;
+}
+
 .button {
   color: #fff;
   background-color: #1b1b1b;
@@ -68,6 +103,17 @@
   text-decoration: none;
   padding: 1rem;
   border-radius: 50px;
+  text-transform: uppercase;
+}
+
+.button-small {
+  color: #fff;
+  background-color: #1b1b1b;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  text-decoration: none;
+  padding: 0.5rem;
+  border-radius: 25px;
   text-transform: uppercase;
 }
 
@@ -85,6 +131,27 @@
   font-size: 0.75rem;
   border-radius: 5px;
   outline: 1px solid rgba(255, 255, 255, 0.4588235294);
+}
+
+.input {
+  max-width: fit-content;
+  min-height: 50vh;
+  min-width: 25vw;
+  border: 1px solid rgb(215, 215, 215);
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0px 0px 30px 2px rgba(0, 0, 0, 0.75);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.fld-con {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-grow: 1;
 }
 
 .input-name {
@@ -135,15 +202,6 @@
   position: relative;
 }
 
-.card-img::after {
-  content: "✭ 4.9";
-  width: 50px;
-  height: 20px;
-  position: absolute;
-  bottom: -25px;
-  right: 0;
-}
-
 .card-txt {
   padding: 0.5em;
   display: flex;
@@ -160,8 +218,42 @@
   font-weight: 700;
 }
 
+nav {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+}
+
 .b-bottom {
-  border-bottom: 1px solid black;
+  border-bottom: 2px solid black;
+}
+
+.border {
+  border: 2px solid black;
+}
+
+.radius {
+  border-radius: 10px;
+}
+
+.shopping-cart {
+  border: 1px solid rgb(218, 218, 218);
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+td, th {
+  padding: 1em;
+  border: 2px solid black;
 }
 
 .wrapper {
@@ -178,6 +270,69 @@
   flex-wrap: wrap;
 }
 
+.flex-row-around {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-column-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .gap {
   gap: 10px;
+}
+
+.p-1 {
+  padding: 0.5em;
+}
+
+.p-2 {
+  padding: 1em;
+}
+
+.p-3 {
+  padding: 1.5em;
+}
+
+.p-4 {
+  padding: 2em;
+}
+
+.m-1 {
+  margin: 0.5em 0;
+}
+
+.m-2 {
+  margin: 1em;
+}
+
+.bg-image {
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  filter: brightness(25%);
 }
