--- a/src/style/scss/components/_input.scss
+++ b/src/style/scss/components/_input.scss
@@ -1,5 +1,26 @@
 @use '../abstracts/variables' as *;
 
+.input {
+    max-width: fit-content;
+    min-height: 50vh;
+    min-width: 25vw;
+    border: 1px solid rgb(215, 215, 215);
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0px 0px 30px 2px rgba(0,0,0,0.75);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.fld-con {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-grow: 1;
+}
+
 .input-name {
     font-family: $text;
     color: $color-900;
